--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -204,3 +204,11 @@ a:hover {
   color: #545454;
   box-shadow: 0 0 10px rgba(0,0,0,0.25);
 }
+
+.profile-icon {
+  margin-right: 75px;
+}
+
+.navbar-nav.align-items-center {
+  align-items: center;
+}
