--- a/templates/base.html
+++ b/templates/base.html
@@ -56,13 +56,18 @@
                 {% endif %}
             </ul>
             {% if current_user.is_authenticated %}
-                <div class="ml-auto">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
-                        </li>
-                    </ul>
-                </div>
+            <div class="ml-auto">
+                <ul class="navbar-nav align-items-center"> <!-- Add the align-items-center class here -->
+                    <li class="nav-item">
+                        <a class="nav-link profile-icon" href="{{ url_for('user_profile') }}">
+                            <img src="{{ url_for('static', filename='img/profile_ico.png') }}" alt="Profile Icon">
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+                    </li>
+                </ul>
+            </div>
             {% endif %}
         </div>
     </nav>
