--- a/templates/knowledge_base.html
+++ b/templates/knowledge_base.html
@@ -21,6 +21,7 @@
     </div>
     <div class="button-group">
       <button type="submit">Search</button>
+      <button type="button" onclick="window.location.href='/index'">Back</button> <!-- Add this line -->
     </div>
   </form>
 </div>
