--- a/templates/registerclient.html
+++ b/templates/registerclient.html
@@ -10,37 +10,37 @@
     <div class="form-row">
       <div class="form-item">
         <label for="tax_id">Tax ID:<span class="required">*</span></label>
-        <input type="text" id="tax_id" name="tax_id" pattern="\d*" required>
+        <input type="text" id="tax_id" name="tax_id" pattern="\d*" required placeholder="10 digits tax id">
       </div>
       <div class="form-item">
         <label for="company">Company:<span class="required">*</span></label>
-        <input type="text" id="company" name="company" required>
+        <input type="text" id="company" name="company" required placeholder="Example Company Name">
       </div>
     </div>
     <div class="form-row">
       <div class="form-item">
         <label for="city">City:<span class="required">*</span></label>
-        <input type="text" id="city" name="city" required>
+        <input type="text" id="city" name="city" required placeholder="Example City">
       </div>
       <div class="form-item">
         <label for="postal_code">Postal Code:<span class="required">*</span></label>
-        <input type="text" id="postal_code" name="postal_code" pattern="[0-9]{5}" required>
+        <input type="text" id="postal_code" name="postal_code" pattern="[0-9]{2}-[0-9]{3}" required placeholder="XX-XXX">
       </div>
     </div>
     <div class="form-row">
       <div class="form-item">
         <label for="address">Address:<span class="required">*</span></label>
-        <input type="text" id="address" name="address" required>
+        <input type="text" id="address" name="address" required placeholder="Street Name and number">
       </div>
       <div class="form-item">
         <label for="phone">Phone:<span class="required">*</span></label>
-        <input type="tel" id="phone" name="phone" pattern="[0-9]{9}" required>
+        <input type="tel" id="phone" name="phone" pattern="[0-9]{9}" required placeholder="9 digit phone number">
       </div>
     </div>
     <div class="form-row">
       <div class="form-item">
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email">
+        <input type="email" id="email" name="email" placeholder="example@noreply.com">
       </div>
     </div>
     <div class="button-group">
