--- a/templates/base.html
+++ b/templates/base.html
@@ -7,73 +7,69 @@
     <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
 </head>
 <body>
-    {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-            {% for category, message in messages %}
-                <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
-                    {{ message }}
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-            {% endfor %}
-        {% endif %}
-    {% endwith %}    
-    {% if show_menu is not defined or show_menu %}
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand navbar-brand-logo" href="{{ url_for('index') }}">
-            <img src="{{ url_for('static', filename='img/logotop.png') }}" alt="Logo" class="navbar-logo menu-logo">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                {% if current_user.is_authenticated %}
-                <li class="nav-item">
-                    <a class="nav-link" href="/clients">Show all clients</a>
-                </li>
-                    {% if current_user.admin %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('printers') }}">Show all printers</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('users') }}">Show all users</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('register_client') }}">Add a new client</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('add_printer') }}">Add a new printer</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('register') }}">Add a new user</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('service_requests') }}">Service Requests</a>
-                        </li>
-                    {% endif %}
-                {% endif %}
-            </ul>
-            {% if current_user.is_authenticated %}
-            <div class="ml-auto">
-                <ul class="navbar-nav align-items-center"> <!-- Add the align-items-center class here -->
-                    <li class="nav-item">
-                        <a class="nav-link profile-icon" href="{{ url_for('user_profile') }}">
-                            <img src="{{ url_for('static', filename='img/profile_ico.png') }}" alt="Profile Icon">
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
-                    </li>
-                </ul>
-            </div>
-            {% endif %}
-        </div>
-    </nav>
+{% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+        {% for category, message in messages %}
+            <div class="alert alert-{{ category }}">{{ message }}</div>
+        {% endfor %}
     {% endif %}
-    {% block content %}{% endblock %}
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+{% endwith %}
+
+{% if show_menu is not defined or show_menu %}
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand navbar-brand-logo" href="{{ url_for('index') }}">
+        <img src="{{ url_for('static', filename='img/logotop.png') }}" alt="Logo" class="navbar-logo menu-logo">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            {% if current_user.is_authenticated %}
+            <li class="nav-item">
+                <a class="nav-link" href="/clients">Show all clients</a>
+            </li>
+                {% if current_user.admin %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('printers') }}">Show all printers</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('users') }}">Show all users</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('register_client') }}">Add a new client</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('add_printer') }}">Add a new printer</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('register') }}">Add a new user</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('service_requests') }}">Service Requests</a>
+                    </li>
+                {% endif %}
+            {% endif %}
+        </ul>
+        {% if current_user.is_authenticated %}
+        <div class="ml-auto">
+            <ul class="navbar-nav align-items-center"> <!-- Add the align-items-center class here -->
+                <li class="nav-item">
+                    <a class="nav-link profile-icon" href="{{ url_for('user_profile') }}">
+                        <img src="{{ url_for('static', filename='img/profile_ico.png') }}" alt="Profile Icon">
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+                </li>
+            </ul>
+        </div>
+        {% endif %}
+    </div>
+</nav>
+{% endif %}
+{% block content %}{% endblock %}
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
