Added more consistent styles and buttons to different templates, also edited the database schema

--- a/templates/add_printer.html
+++ b/templates/add_printer.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="center-container">
-  <h2>Add printer</h2>
+  <h2>Add new printer</h2>
 </div>
 
 <form method="POST">
