--- a/templates/client_printers.html
+++ b/templates/client_printers.html
@@ -1,47 +1,41 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2>Printers Assigned to Client: {{ client_name }}</h2>
 
-{% with messages = get_flashed_messages() %}
-  {% if messages %}
-    <ul class="flashes">
-    {% for message in messages %}
-      <li>{{ message }}</li>
-    {% endfor %}
-    </ul>
-  {% endif %}
-{% endwith %}
+<div class="center-container">
+  <h2>Printers Assigned to Client: {{ client_name }}</h2>
+</div>
 
+<div class="m-3">
 {% if printers %}
-  <table class="table table-striped table-hover">
+<table class="table table-striped table-hover">
+    <tr>
+      <th>Serial Number</th>
+      <th>Model</th>
+      <th>Black Counter</th>
+      <th>Color Counter</th>
+      <th>Action</th>
+      <th>Details</th>
+    </tr>
+    {% for printer in printers %}
       <tr>
-        <th>Serial Number</th>
-        <th>Model</th>
-        <th>Black Counter</th>
-        <th>Color Counter</th>
-        <th>Action</th>
-        <th>Details</th>
+        <td>
+          <a href="{{ url_for('edit_printer', printer_id=printer.id) }}">{{ printer.serial_number }}</a>
+        </td>
+        <td>{{ printer.model }}</td>
+        <td>{{ printer.black_counter }}</td>
+        <td>{{ printer.color_counter }}</td>
+        <td>
+          <a href="{{ url_for('new_service_request_for_printer', tax_id=printer.tax_id, printer_id=printer.id, printer_serial_number=printer.serial_number) }}">New Service Request</a>
+        </td>
+        <td>
+          <a href="{{ url_for('printer_info', printer_id=printer.id) }}">Display</a>
+        </td>
       </tr>
-      {% for printer in printers %}
-        <tr>
-          <td>
-            <!-- Add hyperlink to the serial number -->
-            <a href="{{ url_for('edit_printer', printer_id=printer.id) }}">{{ printer.serial_number }}</a>
-          </td>
-          <td>{{ printer.model }}</td>
-          <td>{{ printer.black_counter }}</td>
-          <td>{{ printer.color_counter }}</td>
-          <td>
-            <a href="{{ url_for('new_service_request_for_printer', tax_id=printer.tax_id, printer_id=printer.id, printer_serial_number=printer.serial_number) }}">New Service Request</a>
-          </td>
-          <td>
-            <a href="{{ url_for('printer_info', printer_id=printer.id) }}">Display</a>
-          </td>
-        </tr>
-      {% endfor %}
-  </table>
+    {% endfor %}
+</table>
 {% else %}
-  <p>No printers assigned to this client.</p>
+<p>No printers assigned to this client.</p>
 {% endif %}
+</div>
 {% endblock %}
