--- a/templates/clients.html
+++ b/templates/clients.html
@@ -27,19 +27,20 @@
                 <th scope="col">Address</th>
                 <th scope="col">Phone</th>
                 <th scope="col">Email</th>
+                <th scope="col">Action</th>
+                <th scope="col">Client Printers</th>
             </tr>
             {% for client in clients %}
             <tr>
-                <td><a href="{{ url_for('edit_client', tax_id=client.tax_id) }}">{{ client.tax_id }}</a></td>
+                <td>{{ client.tax_id }}</td>
                 <td>{{ client.company }}</td>
                 <td>{{ client.city }}</td>
                 <td>{{ client.postal_code }}</td>
                 <td>{{ client.address }}</td>
                 <td>{{ client.phone }}</td>
                 <td>{{ client.email }}</td>
-                <td>
-                    <a href="{{ url_for('client_printers', tax_id=client.tax_id) }}">View Printers</a>
-                </td>
+                <td><button type="button" class="button-style" onclick="location.href='{{ url_for('edit_client', tax_id=client.tax_id) }}'">Edit</button></td>
+                <td><button type="button" class="button-style" onclick="location.href='{{ url_for('client_printers', tax_id=client.tax_id) }}'">View</button></td>
             </tr>
             {% endfor %}
     </table>
