--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -2,7 +2,9 @@
 
 {% block content %}
 
-<h2>Edit User: {{ user.login }}</h2>
+<div class="center-container">
+  <h2>Edit User: {{ user.login }}</h2>
+</div>
 
 <form method="POST" action="{{ url_for('edit_user', user_id=user.id) }}">
     <label for="login">Login:</label>
@@ -26,6 +28,12 @@
     </div>
 </form>
 
+<form id="deleteForm" action="{{ url_for('delete_user', user_id=user.id) }}" method="post">
+    <div class="button-group" style="margin-top: 10%">
+      <input type="submit" value="Delete">
+    </div>
+  </form>
+
 <script>
 document.getElementById('edit').addEventListener('click', function() {
     document.getElementById('login').readOnly = false;
@@ -33,5 +41,12 @@ document.getElementById('edit').addEventListener('click', function() {
     document.getElementById('admin').disabled = false;
     document.getElementById('email').readOnly = false;
 });
+
+document.querySelector('#deleteForm').addEventListener('submit', function(event) {
+  if (!confirm('Are you sure you want to delete this user?')) {
+    event.preventDefault();
+  }
+});
+
 </script>
 {% endblock %}
