--- a/templates/my_requests.html
+++ b/templates/my_requests.html
@@ -11,24 +11,36 @@
   <table class="styled-table">
     <tr>
       <th>Service Request</th>
-      <th>Company</th>
       <th>Serial Number</th>
+      <th>Model</th>
+      <th>Company</th>
+      <th>Address</th>
+      <th>City</th>
+      <th>Phone</th>
       <th>Request Date</th>
     </tr>
     {% for request in service_requests %}
     <tr>
       <td>{{ request.service_request }}</td>
-      <td>{{ request.company }}</td>
       <td>{{ request.serial_number }}</td>
+      <td>{{ request.model }}</td>
+      <td>{{ request.company }}</td>
+      <td>{{ request.address }}</td>
+      <td>{{ request.city }}</td>
+      <td>{{ request.phone }}</td>
       <td>{{ request.request_date }}</td>
     </tr>
     <tr>
-      <td colspan="4">
-        <form class="table-form" method="POST" action="{{ url_for('mark_done') }}" onsubmit="return confirm('Are you sure you want to mark this service request as done?');" style="display: flex; flex-direction: row; justify-content: space-between; align-items: center;">
+      <td colspan="8">
+        <form class="table-form" method="POST" action="{{ url_for('mark_done') }}" onsubmit="return confirm('Are you sure you want to mark this service request as done?');" style="display: flex; flex-direction: row; justify-content: center; align-items: center;">
           <input type="hidden" name="request_id" value="{{ request.id }}">
-          <input type="text" name="done_description" placeholder="Describe work done" maxlength="255" style="width: 80%;">
+          <input type="text" name="done_description" placeholder="Describe work done here and click green OK button to confirm." maxlength="255" style="width: 60%;">
           <input type="image" src="{{ url_for('static', filename='img/ok_ico.png') }}" alt="Done">
         </form>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="8" style="text-align: center;">
         <form method="POST" action="{{ url_for('generate_pdf', request_id=request.id) }}" style="display: inline;">
           <button type="submit" class="button-style">Generate PDF Report</button>
         </form>
