--- a/templates/printer_info.html
+++ b/templates/printer_info.html
@@ -1,66 +1,67 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="center-container">
-    <h2>Printer Information: {{ printer.serial_number }}</h2>
-</div>
-
-<div class="center-container">
-    {{ graph_svg|safe }}
-</div>
-
-<table>
-  <tr>
-    <th>Serial Number</th>
-    <td>{{ printer.serial_number }}</td>
-    <th>Model</th>
-    <td>{{ printer.model }}</td>
-  </tr>
-  <tr>
-    <th>Initial Black Counter</th>
-    <td>{{ printer.black_counter }}</td>
-    <th>Initial Color Counter</th>
-    <td>{{ printer.color_counter }}</td>
-  </tr>
-  <tr>
-    <th>Assigned to</th>
-    <td colspan="3">{{ printer.company }}</td>
-  </tr>
-  <tr>
-    <th>Additional Info</th>
-    <td colspan="3">{{ printer.additional_info }}</td>
-  </tr>
-</table>
-
-<div class="history-container">
-  <div class="history-section">
-    <h3>Service Requests History</h3>
-    <div class="scrollable-table">
-      <table>
-        {% for request in service_requests %}
-        <tr>
-          <td>Date: {{ request.request_date }}, Problem: {{ request.service_request }}, Solved how? {{ request.done_description }}</td>
-        </tr>
-        {% endfor %}
-      </table>
-    </div>
+<div style="margin: 20px;">
+  <div class="center-container">
+      <h2>Printer Information: {{ printer.serial_number }}</h2>
   </div>
 
-  <div class="history-section">
-    <h3>Print History</h3>
-    <div class="scrollable-table">
-      <table>
-        {% for history in print_history %}
-        <tr>
-          <td>Date: {{ history.date }}, Black Counter: {{ history.counter_black_history }}, Color Counter: {{ history.counter_color_history }}</td>
-          {% if history.black_cost is defined and history.color_cost is defined %}
-          <td>Black Cost: {{ history.black_cost }}, Color Cost: {{ history.color_cost }}</td>
-          {% endif %}
-        </tr>
-        {% endfor %}
-      </table>
+  <div class="center-container">
+      {{ graph_svg|safe }}
+  </div>
+
+  <table>
+    <tr>
+      <th>Serial Number</th>
+      <td>{{ printer.serial_number }}</td>
+      <th>Model</th>
+      <td>{{ printer.model }}</td>
+    </tr>
+    <tr>
+      <th>Initial Black Counter</th>
+      <td>{{ printer.black_counter }}</td>
+      <th>Initial Color Counter</th>
+      <td>{{ printer.color_counter }}</td>
+    </tr>
+    <tr>
+      <th>Assigned to</th>
+      <td colspan="3">{{ printer.company }}</td>
+    </tr>
+    <tr>
+      <th>Additional Info</th>
+      <td colspan="3">{{ printer.additional_info }}</td>
+    </tr>
+  </table>
+
+  <div class="history-container">
+    <div class="history-section">
+      <h3>Service Requests History</h3>
+      <div class="scrollable-table">
+        <table>
+          {% for request in service_requests %}
+          <tr>
+            <td>Date: {{ request.request_date }}, Problem: {{ request.service_request }}, Solved how? {{ request.done_description }}</td>
+          </tr>
+          {% endfor %}
+        </table>
+      </div>
+    </div>
+
+    <div class="history-section">
+      <h3>Print History</h3>
+      <div class="scrollable-table">
+        <table>
+          {% for history in print_history %}
+          <tr>
+            <td>Date: {{ history.date }}, Black Counter: {{ history.counter_black_history }}, Color Counter: {{ history.counter_color_history }}</td>
+            {% if history.black_cost is defined and history.color_cost is defined %}
+            <td>Black Cost: {{ history.black_cost }}, Color Cost: {{ history.color_cost }}</td>
+            {% endif %}
+          </tr>
+          {% endfor %}
+        </table>
+      </div>
     </div>
   </div>
 </div>
-
 {% endblock %}
