--- a/templates/printers.html
+++ b/templates/printers.html
@@ -26,15 +26,17 @@
       <th>Black Counter</th>
       <th>Color Counter</th>
       <th>Client</th>
+      <th>Action</th>
     </tr>
     {% for printer in printers %}
     <tr>
       <td>{{ printer.id }}</td>
-      <td><a href="{{ url_for('edit_printer', printer_id=printer.id) }}">{{ printer.serial_number }}</a></td>
+      <td>{{ printer.serial_number }}</td>
       <td>{{ printer.model }}</td>
       <td>{{ printer.black_counter }}</td>
       <td>{{ printer.color_counter }}</td>
       <td>{{ printer.company if printer.company else 'Not assigned to client' }}</td>
+      <td><button type="button" class="button-style" onclick="location.href='{{ url_for('edit_printer', printer_id=printer.id) }}'">Edit</button></td>
     </tr>
     {% endfor %}
   </table>
