--- a/templates/users.html
+++ b/templates/users.html
@@ -8,20 +8,22 @@
 
 <table class="styled-table">
         <tr>
-            <th scope="col">#</th>
+            <th scope="col">ID</th>
             <th scope="col">Username - Login</th>
             <th scope="col">Email</th>
+            <th scope="col">Action</th>
         </tr>
         {% for user in users %}
         <tr>
             <th scope="row">{{ user.id }}</th>
             <td>
-                <a href="{{ url_for('edit_user', user_id=user.id) }}">{{ user.login }}</a>
+                {{ user.login }}
                 {% if user.admin %}
                     <img class="admin-icon" src="{{ url_for('static', filename='img/adminico2.png') }}" alt="admin_icon">
                 {% endif %}
             </td>
             <td>{{ user.email }}</td>
+            <td><button type="button" class="button-style" onclick="location.href='{{ url_for('edit_user', user_id=user.id) }}'">Edit</button></td>
         </tr>
         {% endfor %}
 </table>
