--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -34,7 +34,7 @@
 .container {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start; /* Align children to the start of the container's cross axis */
   height: 100vh;
 }
 
@@ -230,4 +230,36 @@ padding: 10px;
 text-decoration: none;
 color: #545454;
 box-shadow: 0 0 10px rgba(0,0,0,0.25);
+}
+
+@media (max-width: 992px) {
+  .navbar-collapse {
+    background-color: #E0EFFF;
+  }
+}
+
+@media (max-width: 992px) {
+  .navbar-nav.align-items-center {
+    flex-direction: row; 
+    justify-content: flex-start; 
+  }
+}
+
+@media (max-width: 992px) {
+  .navbar-nav:not(.align-items-center) {
+    margin-top: 1rem; 
+  }
+}
+
+@media (max-width: 992px) {
+  .mobile-logout {
+    margin-top: 0.2rem;
+    margin-left: -1.5rem;
+  }
+}
+
+@media (max-width: 992px) {
+  .ml-auto {
+    align-items: flex-start;
+  }
 }
