--- a/templates/index.html
+++ b/templates/index.html
@@ -2,12 +2,13 @@
 
 {% block content %}
 
-
+<!--
 {% if current_user.is_authenticated and current_user.first_login_change_pass %}
   <p style="color: red; margin: 20px; padding: 10px; border: 2px solid red; border-radius: 5px; display: inline-block; box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); font-size: 18px;">
     Account recently created, using temporarily assigned password. Change Your password in profile.
   </p>
-{% endif %}
+{% endif %}>
+-->
 
 <div style="display: flex;">
     <div class="button-container">
@@ -18,9 +19,4 @@
         <a href="{{ url_for('knowledge_base') }}" class="tlbtn">Knowledge Base</a>
     </div>
 </div>
-
-
-
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
 {% endblock %}
