--- a/templates/printers.html
+++ b/templates/printers.html
@@ -17,38 +17,38 @@
   </form>
 </div>
 
-<form method="POST" action="/edit_printer">
-  <table id="printersTable" class="styled-table">
-    <tr>
-      <th>ID</th>
-      <th>Serial Number</th>
-      <th>Model</th>
-      <th>Black Counter</th>
-      <th>Color Counter</th>
-      <th>Client</th>
-      <th>Action</th>
-    </tr>
-    {% for printer in printers %}
-    <tr>
-      <td>{{ printer.id }}</td>
-      <td>{{ printer.serial_number }}</td>
-      <td>{{ printer.model }}</td>
-      <td>{{ printer.black_counter }}</td>
-      <td>{{ printer.color_counter }}</td>
-      <td>{{ printer.company if printer.company else 'Not assigned to client' }}</td>
-      <td><button type="button" class="button-style" onclick="location.href='{{ url_for('edit_printer', printer_id=printer.id) }}'">Edit</button></td>
-    </tr>
-    {% endfor %}
-  </table>
+<div class="center-container">
+    <table id="printersTable" class="styled-table">
+      <tr>
+        <th>ID</th>
+        <th>Serial Number</th>
+        <th>Model</th>
+        <th>Black Counter</th>
+        <th>Color Counter</th>
+        <th>Client</th>
+        <th>Action</th>
+      </tr>
+      {% for printer in printers %}
+      <tr>
+        <td>{{ printer.id }}</td>
+        <td>{{ printer.serial_number }}</td>
+        <td>{{ printer.model }}</td>
+        <td>{{ printer.black_counter }}</td>
+        <td>{{ printer.color_counter }}</td>
+        <td>{{ printer.company if printer.company else 'Not assigned to client' }}</td>
+        <td><button type="button" class="button-style" onclick="location.href='{{ url_for('edit_printer', printer_id=printer.id) }}'">Edit</button></td>
+      </tr>
+      {% endfor %}
+    </table>
+</div>
+  
+<div class="pagination">
+  <a href="{{ url_for('printers', page=1) }}">First..</a>&nbsp;
+  {% if page > 1 %}
+  <a href="{{ url_for('printers', page=page-1) }}">..Previous..</a>&nbsp;
+  {% endif %}
+  <span>..Page {{ page }}..</span>&nbsp;
+  <a href="{{ url_for('printers', page=page+1) }}">..Next</a>
+</div>
 
-  <div class="pagination">
-    <a href="{{ url_for('printers', page=1) }}">First..</a>&nbsp;
-    {% if page > 1 %}
-    <a href="{{ url_for('printers', page=page-1) }}">..Previous..</a>&nbsp;
-    {% endif %}
-    <span>..Page {{ page }}..</span>&nbsp;
-    <a href="{{ url_for('printers', page=page+1) }}">..Next</a>
-  </div>
-</form>
-
-{% endblock %}
+{% endblock %}  
