--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 
 <div style="display: flex;">
     <div class="button-container">
-        <a href="{{ url_for('my_requests') }}" class="tlbtn">Requests assigned to me</a>
+        <a href="{{ url_for('my_requests') }}" class="tlbtn">Requests Assigned To Me</a>
     </div>
 
     <div class="button-container">
