Corrected requirements because of outdated library

--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -29,7 +29,7 @@
 </form>
 
 {% if is_admin %}
-<div class="admin-box">
+<div class="admin-box center" style="width: 40%; margin: auto;">
     <h3>My Company Details</h3>
     <p>Company: {{ company.company_name }}</p>
     <p>Tax ID: {{ company.tax_id }}</p>
