Added a lot of the same code to templates to mitigate an owasp error

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
   <p style="color: red; margin: 20px; padding: 10px; border: 2px solid red; border-radius: 5px; display: inline-block; box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); font-size: 18px;">
     Account recently created, using temporarily assigned password. Change Your password in profile.
   </p>
-{% endif %}>
+{% endif %}
 
 <div style="display: flex;">
     <div class="button-container">
