--- a/templates/register_admin.html
+++ b/templates/register_admin.html
@@ -8,6 +8,7 @@
     <h2>Register admin and Your company</h2>
   </div>
   <form action="/register_admin" method="post">
+  <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
   <div class="form-row">
     <div class="form-item">
       <label for="login">Login:<span class="required">*</span></label>
