--- a/templates/add_printer.html
+++ b/templates/add_printer.html
@@ -7,6 +7,7 @@
 </div>
 
 <form method="POST">
+  <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
   <div class="form-row">
     <div class="form-item">
       <label for="printer_serial_number">Printer Serial Number:<span class="required"> *</span></label>
