--- a/templates/admpassreset.html
+++ b/templates/admpassreset.html
@@ -6,6 +6,7 @@
 <body>
     <h1>Admin Password Reset</h1>
     <form action="/reset_password" method="post">
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required>
         <input type="submit" value="Send Reset Token">
