--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,9 @@
     <head>
         <title>Printer Management Cloud Application</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='styles/bootstrap.min.css') }}">
+        <script src="{{ url_for('static', filename='jquery-3.5.1.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='bootstrap.min.js') }}"></script>
         <link rel="stylesheet" href="{{ url_for('static', filename='styles/styles.css') }}">
         <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
     </head>
@@ -64,7 +66,5 @@
 </nav>
 {% endif %}
 {% block content %}{% endblock %}
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
