--- a/templates/confirmreset.html
+++ b/templates/confirmreset.html
@@ -6,6 +6,7 @@
 <body>
     <h1>Confirm Password Reset</h1>
     <form action="/confirm_reset/{{ token }}" method="post">
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
         <label for="token">Token:</label>
         <input type="text" id="token" name="token" required>
         <label for="password">New Password:</label>
