--- a/templates/edit_client.html
+++ b/templates/edit_client.html
@@ -7,6 +7,7 @@
 </div>
 
 <form method="POST">
+  <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
     <div class="form-row">
       <div class="form-item">
         <label for="tax_id">Tax ID:<span class="required">*</span></label>
