--- a/templates/edit_printer.html
+++ b/templates/edit_printer.html
@@ -7,6 +7,7 @@
 </div>
 
 <form method="POST">
+  <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
   <div class="form-row">
     <div class="form-item">
       <label for="printer_serial_number">Printer Serial Number:<span class="required"> *</span></label>
@@ -61,6 +62,7 @@
 </form>
 
 <form id="deleteForm" action="{{ url_for('delete_printer', printer_id=printer.id) }}" method="post">
+  <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
   <div class="button-group" style="margin-top: 10%">
     <input type="submit" value="Delete">
   </div>
