--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -7,6 +7,7 @@
 </div>
 
 <form method="POST" action="{{ url_for('edit_user', user_id=user.id) }}">
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
     <label for="login">Login:</label>
     <input type="text" id="login" name="login" value="{{ user.login }}">
 
@@ -28,12 +29,6 @@
     </div>
 </form>
 
-<form id="deleteForm" action="{{ url_for('delete_user', user_id=user.id) }}" method="post">
-    <div class="button-group" style="margin-top: 10%">
-      <input type="submit" value="Delete">
-    </div>
-  </form>
-
 <script>
 document.getElementById('edit').addEventListener('click', function() {
     document.getElementById('login').readOnly = false;
@@ -41,12 +36,5 @@ document.getElementById('edit').addEventListener('click', function() {
     document.getElementById('admin').disabled = false;
     document.getElementById('email').readOnly = false;
 });
-
-document.querySelector('#deleteForm').addEventListener('submit', function(event) {
-  if (!confirm('Are you sure you want to delete this user?')) {
-    event.preventDefault();
-  }
-});
-
 </script>
 {% endblock %}
