--- a/templates/login.html
+++ b/templates/login.html
@@ -13,6 +13,7 @@
             <br><br>
         </div>
         <form action="/login" method="post">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
             <div class="form-group">
                 <label for="login">Login:</label>
                 <input type="text" class="form-control" id="login" name="login" required>
