--- a/templates/service_requests.html
+++ b/templates/service_requests.html
@@ -58,6 +58,7 @@
         <td>{{ request.request_date }}</td>
         <td>
           <form action="{{ url_for('assign_user') }}" method="post">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
             <select name="user_id">
               {% for user in users.values() %}
                 <option value="{{ user.id }}" {% if user.id == request.assigned_to %}selected{% endif %}>{{ user.login }}</option>
@@ -69,11 +70,13 @@
         </td>
         <td class="centered-content">
           <form method="POST" action="{{ url_for('mark_done') }}" onsubmit="return confirm('Are you sure you want to mark this service request as done?');">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
             <input type="hidden" name="request_id" value="{{ request_id }}">
             <input type="image" src="{{ url_for('static', filename='img/ok_ico.png') }}" alt="Done" style="display: block; margin: auto;">
           </form>
         <td>
           <form action="{{ url_for('delete_request', id=request_id) }}" method="post" onsubmit="return confirm('Are you sure you want to delete this service request?');">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
             <input type="image" src="{{ url_for('static', filename='img/del_ico.png') }}" alt="Delete" style="display: block; margin: auto;">
           </form>
         </td>
