--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -7,6 +7,8 @@
 </div>
 
 <form id="userProfileForm" method="POST" action="{{ url_for('user_profile') }}">
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+
     <label for="login">Login:</label>
     <input type="text" id="login" name="login" value="{{ user.login }}" readonly style="background-color: #e9ecef;">
 
